# flet

./: .appveyor.yml
flet_client/: pyproject.toml
flet_client/src/: main.py
