[project]
name = "flet_client"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
  "flet==0.26.0.dev3999"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0.dev3999"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.appveyor"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Flet"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Appveyor Systems Inc."

[tool.flet.app]
path = "src"