[project]
name = "flet_client"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "flet @ git+https://github.com/flet-dev/flet.git@main#subdirectory=sdk/python/packages/flet",
  "flet-ads >= 0.1.0",
  # "flet-audio",
  # "flet-audio-recorder",
  # "flet-flashlight",
  # "flet-geolocator",
  # "flet-lottie",
  # "flet-map",
  # "flet-permission-handler",
  # "flet-rive",
  # "flet-video",
  # "flet-webview"
]

[tool.flet.flutter.pubspec.dependency_overrides.flet.git]
url = "https://github.com/flet-dev/flet.git"
ref = "main"
path = "packages/flet"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { git = "https://github.com/flet-dev/flet.git", rev = "main", subdirectory = "sdk/python/packages/flet"}
flet-cli = { git = "https://github.com/flet-dev/flet.git", rev = "main", subdirectory = "sdk/python/packages/flet-cli"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.appveyor"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Flet"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Appveyor Systems Inc."

[tool.flet.app]
path = "src"